<resources>
    <string name="app_name">EventiSardinia</string>
    <string name="email">              Email</string>
    <string name="password">           Password</string>
    <string name="login_utente">Login Utente</string>
    <string name="non_ti_sei_registrato_premi_qui">Non ti sei registrato? Premi qui</string>
    <string name="accedi">Accedi</string>
    <string name="nome">nome</string>
    <string name="telefono">telefono</string>
    <string name="titolo">              Titolo</string>
    <string name="descrizione">           Descrizione</string>
    <string name="invia">Invia</string>
    <string name="title_activity_maps">Map</string>
    <string name="cognome">Cognome</string>
    <string name="title_activity_account">account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tendina">Tendina</string>

</resources>
